# cybersentinel

./: .dockerignore  .env.example  .gitignore  COMMUNITY_BUILD_GUIDE.md  Dockerfile  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  requirements-mcp.txt  requirements.txt  vercel.json  vercel_app.py  worker.py
.github/workflows/: ci.yml
backend/api/routes/: ai.py  api_keys.py  auth.py  blockchain.py  health.py  scans.py  teams.py  threat.py  users.py  ws.py
backend/core/: config.py  csrf.py  http_client.py  limiter.py  security.py
backend/db/: database.py
backend/models/: api_key.py  blockchain.py  scan.py  schemas.py  team.py  threat.py  user.py
backend/services/: ai_analysis.py  api_keys.py  auth.py  blockchain.py  events.py  github_oauth.py  notifications.py  nuclei_engine.py  scan_engine.py  scheduler.py  teams.py  threat_intel.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMUNITY.md  DEPLOYMENT.md  DEVELOPMENT.md  INTEGRATIONS.md  STRATEGY.md  USAGE.md
frontend/static/css/: main.css
frontend/static/js/: app.js  auth.js  dashboard.js  utils.js
frontend/templates/: dashboard.html  index.html  login.html  register.html
nginx/: default.conf
scripts/: backup.sh  run.sh  security_scan.py  setup.sh  update_threat_intel.py
tests/backend/: test_ai_analysis.py  test_api.py  test_blockchain.py  test_mcp_server.py  test_notifications.py  test_scan_engine.py  test_teams.py  test_threat_intel.py  test_worker.py
