[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cybersentinel"
version = "0.2.0"
description = "Community-driven security scanning platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["security", "scanning", "threat-intel", "blockchain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"

[tool.bandit]
skips = ["B101"]

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
fail_under = 40
