[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[project]
name = "cybersentinel"
version = "0.2.0"
description = "Community-driven security scanning platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["security", "scanning", "threat-intel", "blockchain"]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy==2.0.30",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "aiosqlite==0.20.0",
    "croniter==2.0.5",
    "anthropic==0.49.0",
    "openai==1.55.0",
    "mcp==1.2.1",
    "slowapi>=0.1.9",
    "psycopg2-binary>=2.9.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"

[tool.bandit]
skips = ["B101"]

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
fail_under = 40
